# streamlit-TTS

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
streamlit_TTS/: __init__.py  package-lock.json
streamlit_TTS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
streamlit_TTS/frontend/: package-lock.json  package.json  tsconfig.json
streamlit_TTS/frontend/src/: App.css  App.tsx  index.tsx
